# balance_bot_2

./: .gitignore  AGENTS.md  README.md  deploy_and_run.sh  pyproject.toml
balance_bot/: configuration.py  main.py  utils.py
balance_bot/discovery/: pipeline.py  protocol.py  steps.py
balance_bot/hardware/: mocks.py  piconzero.py  robot_hardware.py
tests/: test_discovery.py
